--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "^12.2.7",
     "@angular/platform-browser-dynamic": "^12.2.7",
     "@angular/router": "^12.2.7",
+    "ansi-html": "0.0.7",
     "rxjs": "~6.6.0",
+    "set-value": "^4.1.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
